fixed landscape vue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ button {
 header {
   width: 100%;
   background-color: #facac3;
-  height: 8vh;
+  min-height: 8vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -51,7 +51,7 @@ header {
 footer {
   width: 100%;
   background-color: #facac3;
-  height: 7vh;
+  min-height: 7vh;
   display: flex;
   align-items: center;
   border-top: 2px solid black;
@@ -346,7 +346,7 @@ main {
 /********** MEDIA QUERY **********/
 @media (max-width: 700px) {
   .header-link {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: 400;
   }
 
